# rectilinear-lookup-table

./: .flake8  README.md  pyproject.toml
rectilinear_lookup_table/: __init__.py  rectilinear_lookup_table.py
