[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rectilinear_lookup_table"
version = "1.0.0"
description = "A convenience class to perform n-dimensional interpolations on rectilinear grids"
readme = "README.md"
authors = [
  { name = "Cetin Alanyalioglu", email = "cetinalanyalioglu@gmail.com" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.0.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License"
]
dependencies = ["numpy", "scipy"]

[project.urls]
Homepage = "https://github.com/cetinalanyalioglu/rectilinear-lookup-table"

[project.optional-dependencies]
dev = ["black", "flake8", "pip-tools", "bumpver"]
h5 = ["h5py"]

[tool.black]
line-length = 120
target-version = ['py38']
experimental-string-processing = true

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"rectilinear_lookup_table/__init__.py" = ["{version}"]
